--- a/index.html
+++ b/index.html
@@ -21,41 +21,60 @@
 
 <div id="weaponsDiv">
     <span id="weaponsSpan">
-        <input type="button" value="ROCK" id="rockbtn">
-        <input type="button" value="PAPER" id="paperbtn">
-        <input type="button" value="SCISSORS" id="scissorbtn">
+        <input type="button" value="ROCK" id="rockbtn" class="weapons">
+        <input type="button" value="PAPER" id="paperbtn" class="weapons">
+        <input type="button" value="SCISSORS" id="scissorbtn" class="weapons">
     </span>
 </div>
 <!--TODO figure out how to move to index.js and still work: -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script>
-    var socket = io.connect('http://localhost:3000');
-    var username = prompt('what is your username?');
-    var draw = document.getElementById('drawbtn');
-    var rock = document.getElementById('drawbtn');
-    var paper = document.getElementById('paperbtn');
-    var scissor = document.getElementById('scissorbtn');
 
-    draw.addEventListener('click', function() {
+<script>
+    $(function(){
+        var socket = io();
+        var username = prompt('what is your username?');
+        var draw = document.getElementById('drawbtn');
+        var rock = document.getElementById('rockbtn');
+        var paper = document.getElementById('paperbtn');
+        var scissor = document.getElementById('scissorbtn');
+
+//        $('#drawbtn').click(function(){
+//            $('.weapons').show('slow');
+//            console.log($('.weapons').innerHTML);
+//        });
+//
+//        $('.weapons').click(function(){
+//
+//        });
+
+
+
         rock.style.visibility = 'hidden';
         paper.style.visibility = 'hidden';
         scissor.style.visibility = 'hidden';
-    });
-    rock.addEventListener('click', function() {
-        socket.emit('selectedWeapon', 1);
-    });
-    paper.addEventListener('click', function() {
-        socket.emit('selectedWeapon', 2);
-    });
-    scissor.addEventListener('click', function() {
-        socket.emit('selectedWeapon', 3);
-    });
 
-    socket.emit('setUsername', username);
+        draw.addEventListener('click', function() {
+            rock.style.visibility = 'visible';
+            paper.style.visibility = 'visible';
+            scissor.style.visibility = 'visible';
+        });
+        rock.addEventListener('click', function() {
+            socket.emit('selectedWeapon', 1);
+        });
+        paper.addEventListener('click', function() {
+            socket.emit('selectedWeapon', 2);
+        });
+        scissor.addEventListener('click', function() {
+            socket.emit('selectedWeapon', 3);
+        });
 
-    // Example communication.
-    socket.on('message', function(message) {
+        socket.emit('setUsername', username);
+
+        // Example communication.
+        socket.on('message', function(message) {
 //        alert('want a message?: ' + message);
+        });
     });
 </script>
 </body>
