--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <script>
     $(function(){
 //        Creates object for each connection/user.
-        var socket = io();
+        var socket = io("https://agile-citadel-19288.herokuapp.com");
         // Hides buttons and clears message area.
         $('.weapons').hide();
         $('#messageLog').empty();
