--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <script>
     $(function(){
 //        Creates object for each connection/user.
-        var socket = io("https://safe-badlands-55058.herokuapp.com/");
+        var socket = io();
         // Hides buttons and clears message area.
         $('.weapons').hide();
         $('#messageLog').empty();
